--- a/style.css
+++ b/style.css
@@ -31,17 +31,35 @@ a{
     height: 600px;
 }
 
-.apresentacao__conteudo_titulo{
+.apresentacao__conteudo__titulo{
     font-size: 50px;
     font-family: 'Krona One', sans-serif;
 }
 
-.apresentacao__conteudo_descricao{
+.apresentacao__conteudo__descricao{
     font-size: 29px;
     font-family: "Montserrat", sans-serif;
 }
 
-.apresentacao__conteudo_lista{
+.apresentacao__conteudo__lista{
     font-size: 18px;
     font-family: "Roboto", sans-serif;
+}
+
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__link{
+    background-color: #22d4fd;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000;
+    font-family: "Montserrat", sans-serif;
 }
