--- a/style.css
+++ b/style.css
@@ -20,15 +20,17 @@ a{
 }
 
 .apresentacao{
-    margin: 5%;
+    margin: 1% 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .apresentacao__conteudo{
-    width: 800px;
-    height: 600px;
+    width: 750px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .apresentacao__conteudo__titulo{
