--- a/reset.css
+++ b/reset.css
@@ -1,10 +1,6 @@
-* {
+html, body{
     margin: 0%;
     padding: 0%;
-}
-
-body{
-    height: 100vh;
     box-sizing: border-box;
     background-color: black;
     color: #f6f6f6;
