--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
 }
 
 body {
+    height: 100%;
     box-sizing: border-box;
     background: var(--cor-primaria);
     color: var(--cor-secundaria);
@@ -31,7 +32,7 @@ body {
 .cabecalho__menu__link{
     color: var(--cor-link);
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1,5rem;
     font-weight: 600;
     text-decoration: none;
 }
@@ -51,7 +52,7 @@ span{
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 50px;
+    font-size: 3.125rem;
     font-family: var(--fonte-primaria);
 }
 
@@ -67,12 +68,12 @@ span{
 }
 
 .apresentacao__conteudo__descricao{
-    font-size: 29px;
+    font-size: 1.8125rem;
     font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__conteudo__lista{
-    font-size: 18px;
+    font-size: 1.125rem;
     font-family: "Roboto", sans-serif;
 }
 
@@ -82,11 +83,11 @@ span{
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    gap: 12px;
+    gap: 1rem;
 }
 
 .apresentacao__links__titulo{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-primaria);
     font-weight: 400px;
 }
@@ -100,7 +101,7 @@ span{
     border-radius: 32px;
     width: 250px;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -120,11 +121,22 @@ strong:hover{
 
 .rodape{
     font-weight: 400px;
-    font-size: 24px;
-    padding: 23px;
+    font-size: 1.5rem;
+    padding: 10px;
     display: flex;
     justify-content: center;
     font-family: var(--fonte-secundaria);
     background-color: var(--cor-secundaria);
     color: var(--cor-primaria);
 }
+
+/* 
+.rodape {
+    background-color: #4ca2f8;
+    color: #f6f6f6;
+    font-weight: 400;
+    padding: 12px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+} */
