--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ span{
 }
 
 .apresentacao__conteudo{
-    width: 695px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -92,14 +92,14 @@ span{
     font-weight: 400px;
 }
 
-.apresentacao__links__link{
+.apresentacao__links__botao{
     border: 2px solid var(--cor-terciaria);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 30px;
     border-radius: 32px;
-    width: 250px;
+    width: 45%;
     text-align: center;
     font-size: 1.25rem;
     font-weight: 600;
@@ -109,7 +109,7 @@ span{
     font-family: var(--fonte-secundaria);
 }
 
-.apresentacao__links__link:hover{
+.apresentacao__links__botao:hover{
     cursor: pointer;
     background-color: var(--cor-hover);
 }
@@ -119,10 +119,18 @@ strong:hover{
     color: red;
 }
 
+.apresentacao__imagem{
+    width: 40%;
+}
+
+.esqueleto_la_ele{
+    width: 31.3%;
+}
+
 .rodape{
     font-weight: 400px;
     font-size: 1.5rem;
-    padding: 10px;
+    padding: 1.35%;
     display: flex;
     justify-content: center;
     font-family: var(--fonte-secundaria);
