--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,14 @@ strong:hover{
 
 
 @media (max-width: 1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
     .apresentacao{
         flex-direction: column-reverse;
     }
